# emotion-engine

./: .gitattributes  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  MARKETING_POSTS.md  PROJECT_SUMMARY.md  README.md  README_HF.md  SHARING_GUIDE.md  TRAINING_GUIDE.md  WEB_DEMO_README.md  analyze_training.py  app.py  demo_emotion.py  demo_full_system.py  pyproject.toml  quick_train.py  requirements.txt  requirements_hf.txt  test_agent.py  test_basic.py  test_output.txt  web_demo.py
emotion_engine/: __init__.py
emotion_engine/core/: __init__.py  emotion_dynamics.py  emotion_state.py  relationship.py
emotion_engine/environment/: __init__.py  base_env.py
emotion_engine/environment/scenarios/: __init__.py  caretaking.py  crisis.py
emotion_engine/evaluation/: __init__.py
emotion_engine/networks/: __init__.py  attention.py  emotion_composer.py  emotion_encoder.py  policy_network.py  value_network.py
emotion_engine/rl/: __init__.py  agent.py  ppo.py  replay_buffer.py  reward_shaping.py
emotion_engine/training/: __init__.py  curriculum.py  trainer.py
emotion_engine/utils/: __init__.py
scripts/: train.py
