[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-engine"
version = "0.1.0"
description = "AI Emotion Engine: Learning complex human emotions through deep reinforcement learning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Emotion Engine Team"}
]
keywords = ["ai", "emotion", "reinforcement-learning", "neural-networks", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "pettingzoo>=1.24.3",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "networkx>=3.2",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
]

[project.scripts]
emotion-train = "emotion_engine.scripts.train:main"
emotion-eval = "emotion_engine.scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["emotion_engine*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=emotion_engine --cov-report=html --cov-report=term"
